[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chutes"
version = "0.6.6"
description = "Chutes development kit and CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jon Durbin" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "aiohttp[speedups]>=3.10,<4",
    "backoff>=2.2,<3",
    "requests>=2.32",
    "loguru>=0.7.2",
    "fastapi>=0.110",
    "uvicorn>=0.32.0,<0.39",
    "hypercorn[h2]>=0.16,<0.18",
    "pydantic>=2.9,<3",
    "orjson>=3.10",
    "setuptools>=0.75",
    "substrate-interface>=1.7.11",
    "rich>=13.0.0",
    "typer>=0.12.5",
    "graval>=0.2.6",
    "prometheus-client>=0.21.0",
    "cryptography",
    "psutil",
    "pyjwt>=2.10.1",
    "netifaces",
    "pyudev",
    "aiofiles>=23",
    "semver",
    "huggingface_hub",
    "hf_transfer",
    "setproctitle",
    "cllmv==0.1.3",
]

[project.optional-dependencies]
dev = ["black", "flake8", "wheel", "pytest"]

[project.scripts]
chutes = "chutes.cli:app"

[project.urls]
Homepage = "https://github.com/rayonlabs/chutes"

[tool.setuptools.packages.find]
include = ["chutes*"]

[tool.setuptools.package-data]
chutes = ["*.so", "cfsv", "cfsv_v2", "cfsv_v3", "cfsv_v4"]
"chutes.envdump" = ["*.so"]
